Fix calendar alignment

--- a/_styles.scss
+++ b/_styles.scss
@@ -20,7 +20,7 @@ body {
       position: absolute;
       width: 100%;
 
-      table.ac-table {
+      .ac-table {
         height: 100%;
         position: absolute;
         left: 50%;
@@ -63,128 +63,137 @@ body {
 
             td:nth-child(1) {                     // Sunday header
               left: $sunday-position;
-              transform: translateX(-$sunday-position);
+              transform: translateX(-50%);
             }
 
             td:nth-child(2) {                     // Monday header
               left: $monday-position;
-              transform: translateX(-$monday-position);
+              transform: translateX(-50%);
             }
 
             td:nth-child(3) {                     // Tuesday header
               left: $tuesday-position;
-              transform: translateX(-$tuesday-position);
+              transform: translateX(-50%);
             }
 
             td:nth-child(4) {                     // Wednesday header
               left: $wednesday-position;
-              transform: translateX(-$wednesday-position);
+              transform: translateX(-50%);
             }
 
             td:nth-child(5) {                     // Thursday header
               left: $thursday-position;
-              transform: translateX(-$thursday-position);
+              transform: translateX(-50%);
             }
 
             td:nth-child(6) {                     // Friday header
               left: $friday-position;
-              transform: translateX(-$friday-position);
+              transform: translateX(-50%);
             }
 
             td:nth-child(7) {                     // Saturday header
               left: $saturday-position;
-              transform: translateX(-$saturday-position);
+              transform: translateX(-50%);
             }
           }
 
           tr {
 
-            td.ac-day {                           // Day in month blocks
+            .ac-pad {                           // Greyed out past month day in month blocks
+              //background-color: cornflowerblue;
+              display: none;
+            }
+
+            .ac-pad,                            // Greyed out past month day in month blocks
+            .ac-day {                           // Day in month blocks
+              padding: $day-in-month-padding;                      // Size of day in month block
               position: absolute;
-              margin-top: $day-in-row-margin-top-multiplier;
+              margin-top: $day-in-row-margin-top;
               width: calc((100% / 7) - 1);
 
-              span.ac-day-split-day,
-              span.ac-day-split-bottom.ac-day-split-bottom-ac-grey-out-history,
-              span.ac-day-split-top.ac-day-split-top-ac-grey-out-history {
+              .ac-day-split-day,
+              .ac-day-split-bottom.ac-day-split-bottom-ac-grey-out-history,
+              .ac-day-split-top.ac-day-split-top-ac-grey-out-history {
                 font-size: 1.5rem;
               }
             }
 
-            td.status-ac-grey-out-history {       // Past dates
+            .status-ac-grey-out-history {       // Past dates
               background-color: blue;
             }
 
-            td.ac-day-today {                     // Today
+            .ac-day-today {                     // Today
               background-color: orangered;
             }
 
-            td.status-default {                   // Available
+            .status-default {                   // Available
               background-color: green;
             }
 
-            td.status-1 {
+            .status-1 {
               background-color: red;              // Reserved
             }
 
-            td.ac-day:nth-child(1) {                            // Sunday day in month
+            .ac-day:nth-child(1) {                            // Sunday day in month
               left: #{$sunday-position};
-              transform: translateX(-#{$sunday-position});
+              transform: translateX(-50%);
             }
 
-            td.ac-day:nth-child(2) {                            // Monday day in month
+            .ac-day:nth-child(2) {                            // Monday day in month
               left: #{$monday-position};
-              transform: translateX(-#{$monday-position});
+              transform: translateX(-50%);
             }
 
-            td.ac-day:nth-child(3) {                            // Tuesday day in month
+            .ac-day:nth-child(3) {                            // Tuesday day in month
               left: #{$tuesday-position};
-              transform: translateX(-#{$tuesday-position});
+              transform: translateX(-50%);
             }
 
-            td.ac-day:nth-child(4) {                            // Wednesday day in month
+            .ac-day:nth-child(4) {                            // Wednesday day in month
               left: $wednesday-position;
-              transform: translateX(-$wednesday-position);
+              transform: translateX(-50%);
             }
 
-            td.ac-day:nth-child(5) {                            // Thursday day in month
+            .ac-day:nth-child(5) {                            // Thursday day in month
               left: $thursday-position;
-              transform: translateX(-$thursday-position);
+              transform: translateX(-50%);
             }
 
-            td.ac-day:nth-child(6) {                            // Friday day in month
+            .ac-day:nth-child(6) {                            // Friday day in month
               left: $friday-position;
-              transform: translateX(-$friday-position);
+              transform: translateX(-50%);
             }
 
-            td.ac-day:nth-child(7) {                            // Saturday day in month
+            .ac-day:nth-child(7) {                            // Saturday day in month
               left: $saturday-position;
-              transform: translateX(-$saturday-position);
+              transform: translateX(-50%);
             }
           }
 
-          //&:not(:nth-child(-n + 2)) {               // Applies to all but first two <tr /> (month selector component and day of week header)
-          //
-          //}
-
-          tr:nth-child(3) {
-            margin-top: calc(#{$day-in-row-margin-top-multiplier} * 1);
+          tr:nth-child(3) {                           // First calendar day row
+            margin-top: $day-in-row-margin-top;
           }
 
-          tr:nth-child(4) {
-            margin-top: calc(#{$day-in-row-margin-top-multiplier} * 1.5);
+          tr:nth-child(4) {                           // Second calendar day row
+            margin-top: $day-in-row-margin-top + $day-in-month-padding;
           }
 
-          tr:nth-child(5) {
-            margin-top: calc(#{$day-in-row-margin-top-multiplier} * 2);
+          tr:nth-child(5) {                           // Third calendar day row
+            //margin-top: $day-in-row-margin-top + 2 * ($gutter-vertical + $day-in-month-padding);
+            margin-top: $day-in-row-margin-top + $day-in-month-padding;
           }
 
-          tr:nth-child(6) {
-            margin-top: calc(#{$day-in-row-margin-top-multiplier} * 2.5);
+          tr:nth-child(6) {                           // Fourth calendar day row
+            //margin-top: $day-in-row-margin-top + 3 * ($gutter-vertical + $day-in-month-padding);
+            margin-top: $day-in-row-margin-top + $day-in-month-padding;
           }
 
           tr:nth-child(7) {
-            margin-top: calc(#{$day-in-row-margin-top-multiplier} * 3);
+            margin-top: $day-in-row-margin-top + $day-in-month-padding;
+          }
+
+          tr:nth-child(8) {
+            margin-top: $day-in-row-margin-top + $day-in-month-padding;
           }
         }
       }
